Project

General

Profile

Actions

Bug #15828

closed

'period commit' fails after changing master zones within a cluster

Added by Casey Bodley almost 8 years ago. Updated almost 8 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Reported by

Steps to Reproduce:
1. Configure a single cluster with master zone=us-1 and another zone=us-2.
2. Make us-2 as master. #radosgw-admin zone modify --rgw-zone=us-2 --master
3. Do a period update --commit

Results:
Period commit throws an error:

  1. radosgw-admin period update --commit
    request failed: (22) Invalid argument
    Reason: Cannot commit period on zone 4f20d429-9e6c-4c0c-993b-7c2dd3f7d263, it must be sent to the period's master zone 8d3e4783-47e9-44b8-b772-07ad5888c028.

failed to commit period: (22) Invalid argument


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #15830: jewel: 'period commit' fails after changing master zones within a clusterResolvedActions
Actions #2

Updated by Nathan Cutler almost 8 years ago

  • Status changed from New to Pending Backport
Actions #3

Updated by Nathan Cutler almost 8 years ago

  • Copied to Backport #15830: jewel: 'period commit' fails after changing master zones within a cluster added
Actions #4

Updated by Nathan Cutler almost 8 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF