radosgw-admin: 'period commit' sends to new master zone by default

if no --remote or --url is given, set --remote = master_zone_id to
override the rest_master_conn (which refers to the old master zone)

Fixes: http://tracker.ceph.com/issues/15828

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit fbe1a05355549dfe0c05750683eeb61e275950c2)